Started refactoring
Refactored the crud services. Made a rest apis, rest. Made a new controller for the api-key. Made the dtos more unified where it could be. Started working on the custom annotations.